# multicam_dataset_reader

./: .gitignore  CMakeLists.txt  README.md  build_env.sh  clion.sh  conanfile.py  rmc-build.yaml
cmake/: MDRInitProject.cmake  MDRMacros.cmake  MDRSetupProject.cmake  filesystem.cmake  macros.cmake  targets.cmake
cmake/macros/: MDRMacrosCatkin.cmake  MDRMacrosCommon.cmake  MDRMacrosDependencies.cmake  MDRMacrosExe.cmake  MDRMacrosJava.cmake  MDRMacrosKmod.cmake  MDRMacrosLib.cmake  MDRMacrosProject.cmake  MDRMacrosUtil.cmake
cmake/modules/: FindTGSInventor.cmake  Findconan.cmake  Findgslm.cmake  Findrmbuild.cmake  Findrmpm.cmake
cmake/modules/Compiler/: GNU-vxworks-C.cmake  GNU-vxworks.cmake
cmake/modules/Platform/: RTEMS.cmake  vxworks.cmake
cmake/osl15-x86_64/: MDRSetupConfiguration.cmake  MulticamDatasetReader_pkg_Boost.cmake  MulticamDatasetReader_pkg_Eigen.cmake  MulticamDatasetReader_pkg_OpenCV.cmake  MulticamDatasetReader_pkg_gdal.cmake  MulticamDatasetReader_pkg_gtest.cmake  MulticamDatasetReader_pkg_tclap.cmake
cmake/templates/: ExecTest.sh.in  Kbuild.in  MDR.exe.cmake  MDR.kmod.cmake  MDR.lib.cmake  MDR.test.cmake  MDRVersion.h.in  MulticamDatasetReaderConfig.cmake.in  MulticamDatasetReaderConfigVersion.cmake.in
doc/: format.md
examples/: CMakeLists.txt  read_dataset.cc
examples/load_dataset/: CMakeLists.txt  main.cc
legacy/0.0.1/dataset_reader/: Data.h  DatasetReader.h  Filesystem.h  TimedMapIterator.cc  TimedMapIterator.h  Utils.cc  Utils.h  Version.h.in
legacy/0.0.1/examples/: read_dataset.cc
rmbuild/: project.yaml
rmbuild/configurations/: osl15-x86_64.yaml  readme.txt
src/MulticamDatasetReader/: CMakeLists.txt
src/MulticamDatasetReader/core/: CMakeLists.txt  CameraSensor.cc  CameraSensor.h  Dataset.cc  Dataset.h  Device.cc  Device.h  Globals.cc  Globals.h  GroundTruthData.cc  GroundTruthData.h  GroundTruthSensor.cc  GroundTruthSensor.h  Image.cc  Image.cpp  Image.h  InertiaMeasurement.cc  InertiaMeasurement.h  InertialSensor.cc  InertialSensor.h  Measurement.h  Sensor.h
src/MulticamDatasetReader/utils/: CMakeLists.txt  Filesystem.cc  Filesystem.config.h.in  Filesystem.h  Logging.cc  Logging.h  Misc.cc  Misc.h
src/core/: CMakeLists.txt
src/dataset_reader/: CMakeLists.txt  Data.cc  DatasetReader.cc  DatasetReader.h  Logging.cc  Logging.h  Sensor.cc  Sensor.h  Utils.cc  Utils.h
src/tests/: CMakeLists.txt  ImageTests.cc  ImageTests.cpp  SensorTests.cc
src/utils/: CMakeLists.txt  Filesystem.cc  Filesystem.config.h.in  Filesystem.h
test/: CMakeLists.txt  test_reader.cc
